fud2/tests/snapshots/tests__test@plan_dat-to-jqfile.snap
---
source: fud2/tests/tests.rs
description: "emit plan: dat-to-jqfile"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

expr = .
jq = jq
flags = 
jqfile = ..
rule jq-run
  command = $jq "$expr" $flags $in > $out
rule jq-run-file
  command = $jq -f $jqfile $flags $in > $out

build /output.ext: jq-run-file /input.ext

default /output.ext
