fud2/tests/snapshots/tests__test@plan_dat_to_jq.snap
---
source: fud2/tests/tests.rs
description: "emit plan: dat_to_jq"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

jq.expr = .
jq.exe = jq
jq.flags = 
rule dat_to_jq_rule_1
  command = ${jq.exe} '${jq.expr}' ${jq.flags} $i0 > $o0
build _dat_to_jq_rule_1.fake $o0: dat_to_jq_rule_1 $i0
  i0 = /input.ext
  o0 = /output.ext


default /output.ext
