fud2/tests/snapshots/tests__test@plan_firrtl-with-primitives-noverify.snap
---
source: fud2/tests/tests.rs
description: "emit plan: firrtl-with-primitives-noverify"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

firrtl-exe = /test/bin/firtool
rule firrtl
  command = $firrtl-exe $in -o $out --disable-all-randomization
build primitives-for-firrtl.sv: get-rsrc
rule add-verilog-primitives
  command = cat primitives-for-firrtl.sv $in > $out

build /output.ext: firrtl /input.ext

default /output.ext
